gac_sb/objects/AppCIRdepensePersonnel__c.object
<CustomObject>
    <description>APPLICATION CIR - Les dépenses de prestation de l&apos;application CIR. Comprend les Salariés, les Jeunes docteurs, les Mises à dispositions, les Normalisations et les Veilles (de type dépense de personnel)</description>
    <fields>
        <fullName>Actif__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Si décoché, permet de ne pas prendre en compte le salarié pour l&apos;ensemble des postes de dépense</description>
        <inlineHelpText>Si décoché, permet de ne pas prendre en compte le salarié pour l&apos;ensemble des postes de dépense</inlineHelpText>
        <label>Actif</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cadre__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cadre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CleUnique__c</fullName>
        <formula>Nom__c+Prenom__c+Matricule__c+RecordType.DeveloperName</formula>
        <label>Clé unique</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentaires__c</fullName>
        <label>Commentaires</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_entree__c</fullName>
        <label>Date d&apos;entrée</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_sortie__c</fullName>
        <label>Date de sortie</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Département</label>
        <referenceTo>AppCIRdepartement__c</referenceTo>
        <relationshipName>Depenses_de_personnel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Diplome__c</fullName>
        <label>Diplôme</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fonction__c</fullName>
        <label>Fonction</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heures_RD_option1__c</fullName>
        <label>Heures R&amp;D option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heures_RD_option2__c</fullName>
        <label>Heures R&amp;D option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heures_RD_option3__c</fullName>
        <label>Heures R&amp;D option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heures_brevetPM_option1__c</fullName>
        <label>Heures PM brevet option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heures_brevetPM_option2__c</fullName>
        <label>Heures PM brevet option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heures_brevetPM_option3__c</fullName>
        <label>Heures PM brevet option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heures_normalisation_option1__c</fullName>
        <label>Heures normalisation option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heures_normalisation_option2__c</fullName>
        <label>Heures normalisation option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heures_normalisation_option3__c</fullName>
        <label>Heures normalisation option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heures_veille_option1__c</fullName>
        <label>Heures veille option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heures_veille_option2__c</fullName>
        <label>Heures veille option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heures_veille_option3__c</fullName>
        <label>Heures veille option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportId__c</fullName>
        <label>Id d&apos;import</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ingenieur_Docteur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ce champ ne signifie pas &quot;Jeune docteur&quot;</inlineHelpText>
        <label>Ingénieur / Docteur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interessement_option1__c</fullName>
        <label>Intéressement option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interessement_option2__c</fullName>
        <label>Intéressement option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interessement_option3__c</fullName>
        <label>Intéressement option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matricule__c</fullName>
        <label>Matricule</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mission_CIR__c</fullName>
        <label>Mission CIR</label>
        <referenceTo>AppCIRmission__c</referenceTo>
        <relationshipName>Depenses_de_personnel</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Montant_RD_option1__c</fullName>
        <description>Juste utilisé dans le récap de cumul sur la mission, ne prend pas en compte si le salarié et actif ou si c&apos;est un jeune docteur</description>
        <formula>(Salaire_charge_option1__c + Interessement_option1__c + Participation_option1__c) * Taux_RD_option1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant R&amp;D option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_RD_option2__c</fullName>
        <description>Juste utilisé dans le récap de cumul sur la mission, ne prend pas en compte si le salarié et actif ou si c&apos;est un jeune docteur</description>
        <formula>(Salaire_charge_option2__c + Interessement_option2__c + Participation_option2__c) * Taux_RD_option2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant R&amp;D option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_RD_option3__c</fullName>
        <description>Juste utilisé dans le récap de cumul sur la mission, ne prend pas en compte si le salarié et actif ou si c&apos;est un jeune docteur</description>
        <formula>(Salaire_charge_option3__c + Interessement_option3__c + Participation_option3__c) * Taux_RD_option3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant R&amp;D option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_RD_retenu_option1__c</fullName>
        <formula>IF( Actif__c = true, 
	CASE($RecordType.DeveloperName,
		&apos;jeuneDocteur&apos;,
		2 * (Salaire_charge_option1__c + Interessement_option1__c + Participation_option1__c) * Taux_RD_option1__c,
		&apos;miseDisposition&apos;,
		Salaire_charge_option1__c * Taux_RD_option1__c,
		(Salaire_charge_option1__c + Interessement_option1__c + Participation_option1__c) * Taux_RD_option1__c
	)
    ,
    0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant R&amp;D retenu option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_RD_retenu_option2__c</fullName>
        <formula>IF( Actif__c = true, 
  CASE($RecordType.DeveloperName,
    &apos;jeuneDocteur&apos;,
    2 * (Salaire_charge_option2__c + Interessement_option2__c + Participation_option2__c) * Taux_RD_option2__c,
    &apos;miseDisposition&apos;,
    Salaire_charge_option2__c * Taux_RD_option2__c,
    (Salaire_charge_option2__c + Interessement_option2__c + Participation_option2__c) * Taux_RD_option2__c
  )
    ,
    0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant R&amp;D retenu option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_RD_retenu_option3__c</fullName>
        <formula>IF( Actif__c = true, 
  CASE($RecordType.DeveloperName,
    &apos;jeuneDocteur&apos;,
    2 * (Salaire_charge_option3__c + Interessement_option3__c + Participation_option3__c) * Taux_RD_option3__c,
    &apos;miseDisposition&apos;,
    Salaire_charge_option3__c * Taux_RD_option3__c,
    (Salaire_charge_option3__c + Interessement_option3__c + Participation_option3__c) * Taux_RD_option3__c
  )
    ,
    0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant R&amp;D retenu option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_brevetPM_retenu_option1__c</fullName>
        <formula>IF( Actif__c = true, 
(Salaire_charge_option1__c + Interessement_option1__c + Participation_option1__c) * Taux_brevetPM_option1__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant PM brevet retenu option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_brevetPM_retenu_option2__c</fullName>
        <formula>IF( Actif__c = true, 
(Salaire_charge_option2__c + Interessement_option2__c + Participation_option2__c) * Taux_brevetPM_option2__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant PM brevet retenu option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_brevetPM_retenu_option3__c</fullName>
        <formula>IF( Actif__c = true, 
(Salaire_charge_option3__c + Interessement_option3__c + Participation_option3__c) * Taux_brevetPM_option3__c,  
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant PM brevet retenu option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_normalisation_retenu_option1__c</fullName>
        <formula>IF( Actif__c = true, 
(Salaire_charge_option1__c + Interessement_option1__c + Participation_option1__c) * Taux_normalisation_option1__c * 0.65, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant normalisation retenu option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_normalisation_retenu_option2__c</fullName>
        <formula>IF( Actif__c = true, 
(Salaire_charge_option2__c + Interessement_option2__c + Participation_option2__c) * Taux_normalisation_option2__c * 0.65, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant normalisation retenu option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_normalisation_retenu_option3__c</fullName>
        <formula>IF( Actif__c = true, 
(Salaire_charge_option3__c + Interessement_option3__c + Participation_option3__c) * Taux_normalisation_option3__c * 0.65, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant normalisation retenu option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_veille_retenu_option1__c</fullName>
        <formula>IF( Actif__c = true, 
(Salaire_charge_option1__c + Interessement_option1__c + Participation_option1__c) * Taux_veille_option1__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant veille retenu option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_veille_retenu_option2__c</fullName>
        <formula>IF( Actif__c = true, 
(Salaire_charge_option2__c + Interessement_option2__c + Participation_option2__c) * Taux_veille_option2__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant veille retenu option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_veille_retenu_option3__c</fullName>
        <formula>IF( Actif__c = true, 
(Salaire_charge_option3__c + Interessement_option3__c + Participation_option3__c) * Taux_veille_option3__c, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant veille retenu option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NomPrenomMatricule__c</fullName>
        <formula>Nom__c+Prenom__c+Matricule__c</formula>
        <label>NomPrenomMatricule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nom__c</fullName>
        <label>Nom</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisme_normalisation__c</fullName>
        <inlineHelpText>Pour les salariés ayant des heures de normalisation</inlineHelpText>
        <label>Organisme de normalisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participation_option1__c</fullName>
        <label>Participation option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Participation_option2__c</fullName>
        <label>Participation option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Participation_option3__c</fullName>
        <label>Participation option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prenom__c</fullName>
        <label>Prénom</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salaire_brut_annuel_option1__c</fullName>
        <label>Salaire brut annuel option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salaire_brut_annuel_option2__c</fullName>
        <label>Salaire brut annuel option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salaire_brut_annuel_option3__c</fullName>
        <label>Salaire brut annuel option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salaire_charge_option1__c</fullName>
        <label>Salaire chargé option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salaire_charge_option2__c</fullName>
        <label>Salaire chargé option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Salaire_charge_option3__c</fullName>
        <label>Salaire chargé option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Societe_appartenance__c</fullName>
        <description>Pour les mises à disposition uniquement</description>
        <label>Société d&apos;appartenance</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salarié</fullName>
                    <default>true</default>
                    <label>Salarié</label>
                </value>
                <value>
                    <fullName>TNS</fullName>
                </value>
                <value>
                    <fullName>Stagiaire</fullName>
                </value>
                <value>
                    <fullName>Intérimaire</fullName>
                </value>
                <value>
                    <fullName>Apprenti</fullName>
                </value>
                <value>
                    <fullName>Thésard</fullName>
                </value>
                <value>
                    <fullName>Gérant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taux_RD_option1__c</fullName>
        <formula>IF(Total_heures_travaillees_option1__c == 0,0, Heures_RD_option1__c / Total_heures_travaillees_option1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux R&amp;D option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_RD_option2__c</fullName>
        <formula>IF(Total_heures_travaillees_option2__c == 0,0,Heures_RD_option2__c / Total_heures_travaillees_option2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux R&amp;D option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_RD_option3__c</fullName>
        <formula>IF(Total_heures_travaillees_option3__c == 0,0,Heures_RD_option3__c / Total_heures_travaillees_option3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux R&amp;D option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_brevetPM_option1__c</fullName>
        <formula>IF(Total_heures_travaillees_option1__c == 0,0, Heures_brevetPM_option1__c / Total_heures_travaillees_option1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux PM brevet option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_brevetPM_option2__c</fullName>
        <formula>IF(Total_heures_travaillees_option2__c == 0,0, Heures_brevetPM_option2__c / Total_heures_travaillees_option2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux PM brevet option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_brevetPM_option3__c</fullName>
        <formula>IF(Total_heures_travaillees_option3__c == 0,0, Heures_brevetPM_option3__c / Total_heures_travaillees_option3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux PM brevet option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_normalisation_option1__c</fullName>
        <formula>IF(Total_heures_travaillees_option1__c == 0,0, Heures_normalisation_option1__c / Total_heures_travaillees_option1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux normalisation option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_normalisation_option2__c</fullName>
        <formula>IF(Total_heures_travaillees_option2__c == 0,0, Heures_normalisation_option2__c / Total_heures_travaillees_option2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux normalisation option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_normalisation_option3__c</fullName>
        <formula>IF(Total_heures_travaillees_option3__c == 0,0, Heures_normalisation_option3__c / Total_heures_travaillees_option3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux normalisation option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_veille_option1__c</fullName>
        <formula>IF(Total_heures_travaillees_option1__c == 0,0, Heures_veille_option1__c / Total_heures_travaillees_option1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux veille option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_veille_option2__c</fullName>
        <formula>IF(Total_heures_travaillees_option2__c == 0,0, Heures_veille_option2__c / Total_heures_travaillees_option2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux veille option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taux_veille_option3__c</fullName>
        <formula>IF(Total_heures_travaillees_option3__c == 0,0, Heures_veille_option3__c / Total_heures_travaillees_option3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux veille option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Temps_partiel__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Temps partiel</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_heures_travaillees_option1__c</fullName>
        <label>Total heures travaillées option 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_heures_travaillees_option2__c</fullName>
        <label>Total heures travaillées option 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_heures_travaillees_option3__c</fullName>
        <label>Total heures travaillées option 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_enregistrement__c</fullName>
        <description>Remonté par une règle de workflow en fonction du recordtype de l&apos;enregistrement</description>
        <label>Type d&apos;enregistrement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>[OLD] Dépense de personnel</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dépenses de personnel</pluralLabel>
    <recordTypes>
        <fullName>jeuneDocteur</fullName>
        <active>true</active>
        <label>Jeunes docteurs</label>
    </recordTypes>
    <recordTypes>
        <fullName>miseDisposition</fullName>
        <active>true</active>
        <label>Mises à disposition</label>
    </recordTypes>
    <recordTypes>
        <fullName>salarie</fullName>
        <active>true</active>
        <label>Salariés</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>